fixed social in index.html, change toggle menu alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 html {
-  font-size: 100%; }
+  font-size: 100%;
+  line-height: normal; }
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     html {
       font-size: 80%; } }
@@ -58,7 +59,7 @@ html {
 
 button {
   position: absolute;
-  right: 0.625rem;
+  right: 1.1rem;
   top: -4.125rem;
   outline: none;
   border: none;
@@ -122,6 +123,10 @@ button {
       .site-believing .believing-item::before {
         left: -2.3125rem;
         top: 0.5rem; } }
+    @media screen and (max-width: 567px) {
+      .site-believing .believing-item::before {
+        left: -3rem;
+        top: -1rem; } }
   .site-believing .believing-item::after {
     position: absolute;
     content: "";
@@ -158,9 +163,10 @@ button {
     text-align: center; }
   .site-about .members-p {
     max-width: 37.5rem;
-    text-align: center;
     margin: 0 auto;
-    margin-bottom: 2em; }
+    font-size: 1.3em;
+    margin-bottom: 2em;
+    text-align: center; }
   .site-about .team {
     display: flex;
     justify-content: space-between; }
@@ -200,13 +206,13 @@ iframe {
     height: 28.1rem; }
     @media screen and (min-width: 768px) and (max-width: 1023px) {
       .site-map .map {
-        width: 46.8rem; } }
+        width: 48rem; } }
     @media screen and (max-width: 767px) {
       .site-map .map {
-        max-width: 31.25rem; } }
+        max-width: 44rem; } }
     @media screen and (max-width: 567px) {
       .site-map .map {
-        max-width: 18.75rem; } }
+        max-width: 35rem; } }
   .site-map h2 {
     font-size: 3.125em;
     color: #36988e;
@@ -244,6 +250,8 @@ iframe {
       font-weight: 300;
       color: #36988e;
       font-family: 'Raleway', sans-serif; }
+    .site-contact .contact-info p {
+      font-size: 1.35em; }
   .site-contact .social-icons {
     display: block;
     max-width: 31em;
@@ -295,7 +303,7 @@ footer {
     font-size: 1.25em; }
     footer .footer-info p {
       max-width: 17rem;
-      margin-bottom: 1em; }
+      margin-bottom: 2em; }
       @media screen and (max-width: 767px) {
         footer .footer-info p {
           max-width: 100%; } }
